コミットメッセージ

--- a/Downloads/Dai22_kai/Dai22_kai/src/main/resources/templates/studentList.html
+++ b/Downloads/Dai22_kai/Dai22_kai/src/main/resources/templates/studentList.html
@@ -5,34 +5,33 @@
 </head>
 <body>
 <h1>受講生一覧</h1>
-<table>
-  <thead><"1">
-  <tr>ID<th>
-  <th>名前</th>
+<table border="1">
+  <thead>
+  <tr>
+    <th>ID</th>
+    <th>名前</th>
     <th>カナ名</th>
     <th>ニックネーム</th>
     <th>メールアドレス</th>
-  <th>地域</th>
-  <th>年齢</th>
-  <th>性別</th>
-  <th>備考</th>
+    <th>地域</th>
+    <th>年齢</th>
+    <th>性別</th>
+    <th>備考</th>
   </tr>
   </thead>
   <tbody>
   <tr th:each="studentDetail : ${studentList}">
-  <td th:text="${studentDetail.studentList}">1</td>
-  <td th:text="${studentDetail.studentList}">山田太郎</td>
-  <td th:text="${studentDetail.studentList}">ヤマダタロウ</td>
-  <td th:text="${studentDetail.studentList}">タロー
-    <td th:text="${studentDetail.studentList}">taro@example.com</td>
-  <td th:text="${studentDetail.studentList}">東京
-  <td th:text="${studentDetail.studentList}">20<td>
-  <td th:text="${studentDetail.studentList}">男性<td>
-    <td th:text="${studentDetail.studentList}">特になし</td>
+    <td th:text="${studentDetail.student.id}">1</td>
+    <td th:text="${studentDetail.student.name}">山田太郎</td>
+    <td th:text="${studentDetail.student.kanaName}">ヤマダタロウ</td>
+    <td th:text="${studentDetail.student.nickname}">タロー</td>
+    <td th:text="${studentDetail.student.email}">taro@example.com</td>
+    <td th:text="${studentDetail.student.area}">東京</td>
+    <td th:text="${studentDetail.student.age}">20</td>
+    <td th:text="${studentDetail.student.sex}">男性</td>
+    <td th:text="${studentDetail.student.remark}">特になし</td>
   </tr>
   </tbody>
 </table>
 </body>
 </html>
-
-
